2024-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Refactored 'Profile'.
	* Added tests for 'Profile' using data from QStringList.
2024-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Removed dead code from 'Profile'.
2024-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Added 'Profile::<type>Values()' methods to permit retrieval of
	multiple uses of the same parameter in a given section.
2024-10-23 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'Profile' to return multiple uses of the same parameter
	in the same order as they are encountered in the configuration file.
2024-10-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'Profile' that caused parameters from diverse
	sections to be combined in the incorrect order.
2024-10-24 Fred Gleason <fredg@paravelsystems.com>
	* Added support for section IDs to 'Profile'.
2024-10-24 Fred Gleason <fredg@paravelsystems.com>
	* Renamed the 'Profile::setSource(const QString &,QString *err_msg)'
	method to 'Profile::loadFile(const QString &,QString *err_msg)'.
	* Added a 'Profile::loadDirectory()' method.
2024-10-24 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'dump_profile' test command.
2024-10-24 Fred Gleason <fredg@paravelsystems.com>
	* Renamed fixture data files using a more consistent scheme.
2024-10-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.1.0.
2024-11-01 Fred Gleason <fredg@paravelsystems.com>
	* Added an overloaded 'Profile::loadDirectory()' method.
2024-11-01 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.2.0.
2024-11-01 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a but in 'Profile::loadDirectory()' that would fail when
	given an absolute directory path.
	* Added a 'Directory Load Absolute Path Test' test.
2024-11-01 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.2.1.
2024-11-04 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Sendmail' interface.