@@ -17,6 +17,8 @@
 //   License along with this program; if not, write to the Free Software
 //   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 //
+// EXEMPLAR_VERSION: 1.3.0
+//
 
 #ifndef SENDMAIL_H
 #define SENDMAIL_H
