@@ -46,3 +46,5 @@
 	* Incremented the package version to 1.2.1.
 2024-11-04 Fred Gleason <fredg@paravelsystems.com>
 	* Added a 'Sendmail' interface.
+2024-11-07 Fred Gleason <fredg@paravelsystems.com>
+	* Incremented the package version to 1.3.0.
